prevent dark theme on mobile

--- a/app.css
+++ b/app.css
@@ -1,4 +1,5 @@
 html {
+    color-scheme: light dark;
     background-color: #517188;
     color: white;
     margin: 40px;
